--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       <strong>We're sorry but django-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    index
     <!-- built files will be auto injected -->
   </body>
 </html>
